--- a/Submitted Content/article1.html
+++ b/Submitted Content/article1.html
@@ -122,7 +122,7 @@
     <div class="content-section">
         <h2>Blueprint for Ethical AI: The Case for CAARM</h2>
         <p><strong>Author:</strong> Ajani Maynard</p>
-        <p><em>Date:</em> December 25, 2024</p>
+        <p><em>Date:</em> December 25th, 2024</p>
         <p>Artificial Intelligence (AI) is reshaping industries, redefining societal norms, and unlocking possibilities once confined to science fiction. From healthcare innovations to automated transportation, AI promises unprecedented benefits. Yet, as its influence grows, so do its risks. Bias in algorithms can deepen inequities, surveillance technologies can erode privacy, and unchecked AI misuse can harm societies. For small and developing nations like those in the Caribbean, these risks are amplified. Limited resources and expertise make it harder to navigate the ethical, social, and economic challenges posed by AI. Without proactive strategies, the region risks becoming a passive consumer of technology that does not serve its unique needs—or worse, being left vulnerable to exploitation. To mitigate these risks, the Caribbean must chart its path toward ethical AI adoption. The goal is not just to protect, but to ensure that AI serves as a tool for progress, equity, and innovation tailored to the region’s needs.</p>
         <p>The Caribbean occupies a distinctive space in global AI adoption. It is a region defined by cultural diversity, vibrant traditions, and resourcefulness, yet it is also marked by economic vulnerabilities and external dependencies. AI has the potential to revolutionize agriculture, tourism, healthcare, and disaster management—sectors critical to the Caribbean. However, the adoption of AI technologies comes with unique challenges. Existing biases in AI systems, often trained on non-Caribbean data, can exacerbate disparities rather than solve them. Meanwhile, limited digital infrastructure and fragmented regulatory frameworks create hurdles to widespread and ethical AI use. At the same time, the Caribbean’s diversity offers a powerful lens for addressing AI’s ethical challenges. By combining regional collaboration with a focus on local contexts, the Caribbean can pioneer approaches that ensure AI respects human dignity, cultural values, and societal needs. </p>
         <p>    To address these challenges, the establishment of CAARM (Caribbean Alliance for AI Risk Mitigation) is proposed. CAARM would function as a coalition of governments, businesses, researchers, and civil society—similar to CARICOM or the Caribbean Single Market and Economy (CSME)—dedicated to ethical AI.
@@ -146,7 +146,7 @@
             </p>
     </div>
     <footer>
-        <p>&copy; 2024 Caribbean STEM Hub. All rights reserved.</p>
+        <p>&copy; 2025 Caribbean STEM Hub. All rights reserved.</p>
     </footer>
 </body>
 </html>
