--- a/index.HTML
+++ b/index.HTML
@@ -176,28 +176,28 @@
         </div>
 
         <div class="content-section" id="news">
-            <h2 class="section-header">Latest News</h2>
-            <!--
+            <h2 class="section-header">Latest Works</h2>
+            
             <div class="grid">
                 <div class="card">
-                    <h3>News Title 1</h3>
-                    <p>Summary of news content. Click to read more.</p>
+                    <h3><a href="Submitted Content/Article5.html" target="_blank">A Cognitive Commentary of the Effects of Watching Subtitled Anime on Japanese Language Learning in English Language Speakers</a></h3>
+                    <p>Click the title to read more.</p>
                 </div>
                 <div class="card">
-                    <h3>News Title 2</h3>
-                    <p>Summary of news content. Click to read more.</p>
+                    <h3><a href="Submitted Content/Article3.html" target="_blank">Tiny Ocean Protist Could Help Tackle Climate Change</a></h3>
+                    <p>Click the title to read more.</p>
                 </div>
                 <div class="card">
-                    <h3>News Title 3</h3>
-                    <p>Summary of news content. Click to read more.</p>
+                    <h3><a href="Submitted Content/Article2.html" target="_blank">Sargassum as Fertilizer? A simple solution for an island wide issues? Or an easy way out?</a></h3>
+                    <p>Click the title to read more.</p>
                 </div>
             </div>
-            -->
+            
         </div>
     </main>
 
     <footer>
-        <p>&copy; 2024 Caribbean STEM Hub. All rights reserved.</p>
+        <p>&copy; 2025 Caribbean STEM Hub. All rights reserved.</p>
     </footer>
 </body>
 </html>
