Some more articles!

--- a/Explore.HTML
+++ b/Explore.HTML
@@ -177,6 +177,21 @@
         </div>
 
         <h3 class="section-header">Featured</h3>
+       
+       <div class="grid">
+            <div class="card">
+                <h3><a href="Submitted Content/Article7.html" target="_blank">Top 5 Technological Advancements of 2025 (so far) that are Transforming the World.</a></h3>
+                <p>2025’s tech breakthroughs are rewriting reality. This article highlights five transformative innovations—from AI and quantum computing to green energy—that are reshaping global systems and accelerating the convergence of science and society.</p>
+            </div>  
+        </div>
+       
+        <div class="grid">
+            <div class="card"> 
+                <h3><a href="Submitted Content/Article6.html" target="_blank">Tiny Robots Use Sound To Navigate The Environment</a></h3>
+                <p>Swarm intelligence meets sound. This article explores how tiny robots inspired by bees use acoustic signals to self-organize, adapt, and navigate complex environments—opening new doors for robotics and active matter research.</p>
+            </div>  
+        </div>
+
         <div class="grid">
             <div class="card">
                 <h3><a href="Submitted Content/Article2.html" target="_blank">Sargassum as Fertilizer? A simple solution for an island wide issues? Or an easy way out?</a></h3>
