--- a/Submitted Content/Article2.html
+++ b/Submitted Content/Article2.html
@@ -138,6 +138,23 @@
 <p>As the occurrence of sargassum influxes becomes more frequent, both nations and individuals will likely explore innovative methods for utilizing and disposing of this material. Until we have a better understanding of the health concerns, it would be prudent to restrict the use of sargassum to non-consumable applications. This means using sargassum as a construction material, biofuel, or—if used as fertilizer—only for ornamental plants.</p>
 
     </div>
+    
+    <script src="https://giscus.app/client.js"
+        data-repo="AjaniM2005/Caribbean-STEM-Hub"
+        data-repo-id="R_kgDOK1Qfug"
+        data-category="Announcements"
+        data-category-id="DIC_kwDOK1Qfus4CuVL7"
+        data-mapping="pathname"
+        data-strict="0"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="bottom"
+        data-theme="dark_high_contrast"
+        data-lang="en"
+        crossorigin="anonymous"
+        async>
+    </script>
+    
     <footer>
         <p>&copy; 2025 Caribbean STEM Hub. All rights reserved.</p>
     </footer>
