--- a/Submitted Content/Article3.html
+++ b/Submitted Content/Article3.html
@@ -147,6 +147,23 @@ The global urgency to reduce carbon emissions, as outlined in the Paris Agreemen
 
 <p><em>Sources: Based on experimental and genetic research conducted by scientists at the University of Sydney, University of Tasmania, and University of Edinburgh, including data from Tara Oceans and the GenBank database.</em></p>
     </div>
+    
+    <script src="https://giscus.app/client.js"
+        data-repo="AjaniM2005/Caribbean-STEM-Hub"
+        data-repo-id="R_kgDOK1Qfug"
+        data-category="Announcements"
+        data-category-id="DIC_kwDOK1Qfus4CuVL7"
+        data-mapping="pathname"
+        data-strict="0"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="bottom"
+        data-theme="dark_high_contrast"
+        data-lang="en"
+        crossorigin="anonymous"
+        async>
+    </script>
+    
     <footer>
         <p>&copy; 2025 Caribbean STEM Hub. All rights reserved.</p>
     </footer>
