--- a/Submitted Content/Article4.html
+++ b/Submitted Content/Article4.html
@@ -161,6 +161,23 @@ The developmental and cognitive delays that these two groups face, especially in
 <p>• Cleveland Clinic. (2021). Williams Syndrome. https://my.clevelandclinic.org/health/diseases/15174-williams-syndrome</p>
 
     </div>
+   
+   <script src="https://giscus.app/client.js"
+        data-repo="AjaniM2005/Caribbean-STEM-Hub"
+        data-repo-id="R_kgDOK1Qfug"
+        data-category="Announcements"
+        data-category-id="DIC_kwDOK1Qfus4CuVL7"
+        data-mapping="pathname"
+        data-strict="0"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="bottom"
+        data-theme="dark_high_contrast"
+        data-lang="en"
+        crossorigin="anonymous"
+        async>
+    </script>
+   
     <footer>
         <p>&copy; 2025 Caribbean STEM Hub. All rights reserved.</p>
     </footer>
