--- a/Submitted Content/Article5.html
+++ b/Submitted Content/Article5.html
@@ -141,3 +141,27 @@ While the learning and acquisition of the Japanese language for English speakers
 
 <p><strong>Conclusion</strong><br>
 If anime is used thoughtfully, it offers a powerful medium for exposing learners to learn Japanese in a cognitively rich way. Of course, one must keep in mind that this method should be treated as a supplement rather than a replacement for actual learning. However, no one can deny that anime’s blend of visual storytelling, auditory immersion, and emotional engagement aligns well with language acquisition—provided it is used alongside more formal instruction.</p>
+
+    </div>
+    
+    <script src="https://giscus.app/client.js"
+        data-repo="AjaniM2005/Caribbean-STEM-Hub"
+        data-repo-id="R_kgDOK1Qfug"
+        data-category="Announcements"
+        data-category-id="DIC_kwDOK1Qfus4CuVL7"
+        data-mapping="pathname"
+        data-strict="0"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="bottom"
+        data-theme="dark_high_contrast"
+        data-lang="en"
+        crossorigin="anonymous"
+        async>
+    </script>
+    
+    <footer>
+        <p>&copy; 2025 Caribbean STEM Hub. All rights reserved.</p>
+    </footer>
+</body>
+</html>    
