--- a/Submitted Content/article1.html
+++ b/Submitted Content/article1.html
@@ -145,6 +145,23 @@
         <p>The time to act is now. Governments, businesses, researchers, and civil society must recognize the urgency of addressing AI risks and commit to building a future where AI works for all. CAARM offers a vision of what is possible when ethics and innovation intersect. Stakeholders are encouraged to support the initiative, whether by advocating for regional AI policies, funding research, or participating in collaborative efforts. Together, these actions can ensure the Caribbean remains at the forefront of responsible AI adoption. AI holds immense potential, but only if guided by ethical considerations and regional priorities. By embracing CAARM’s vision, the Caribbean can not only safeguard its future but also set a global example of how small nations can shape the ethical AI landscape.
             </p>
     </div>
+    
+    <script src="https://giscus.app/client.js"
+        data-repo="AjaniM2005/Caribbean-STEM-Hub"
+        data-repo-id="R_kgDOK1Qfug"
+        data-category="Announcements"
+        data-category-id="DIC_kwDOK1Qfus4CuVL7"
+        data-mapping="pathname"
+        data-strict="0"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="bottom"
+        data-theme="dark_high_contrast"
+        data-lang="en"
+        crossorigin="anonymous"
+        async>
+    </script>
+    
     <footer>
         <p>&copy; 2025 Caribbean STEM Hub. All rights reserved.</p>
     </footer>
