New article batch

--- a/Submitted Content/Article7.html
+++ b/Submitted Content/Article7.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Top 5 Technological Advancements of 2025 (so far) that are Transforming the World.</title>
+    <title>Top 5 Technological Advancements of 2025 (so far) that are Transforming the World</title>
     <link rel="icon" href="/logo(1).png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;700&display=swap" rel="stylesheet">
     <style>
@@ -120,7 +120,7 @@
         </nav>
     </header>
     <div class="content-section">
-        <h2>Top 5 Technological Advancements of 2025 (so far) that are Transforming the World.</h2>
+        <h2>Top 5 Technological Advancements of 2025 (so far) that are Transforming the World</h2>
         <p><strong>Author: </strong><a href="https://www.linkedin.com/in/joseph-hindi-849a94369/" target="_blank">Joseph Hindi — Staff Writer</a></p>
         <p><em>Date: </em> August 13th, 2025</p>
         <p>Mid-2025 marks a shift in the global technological landscape that is more dramatic than many people predicted it would be. What makes this year different from others is not just the scale of innovation, but also the speed of its integration into everyday life. Due to these advancements, the boundaries between science fiction and reality have blurred—or, in some cases, dissolved completely. This commentary aims to highlight the following five breakthroughs that are not just isolated achievements, but are also interconnected forces that are actively reshaping our economies, societies, and futures.</p>
@@ -156,8 +156,7 @@ Each of these advancements is revolutionary in their individual way. Together, t
 <p>The question for the rest of 2025 is no longer what technology can do, but rather how humanity will choose to wield it. Those decisions will define not just this year, but the trajectory of future decades to come.</p>
 
 <p><em>For further reference:</em><br>
-“Top New Technologies Transforming the World in 2025” by Helan Wilson<br>
-URL: https://techresearchs.com/tech/top-new-technologies-transforming-the-world-in-2025/</p>
+<a href="https://techresearchs.com/tech/top-new-technologies-transforming-the-world-in-2025/" target="_blank">“Top New Technologies Transforming the World in 2025” by Helan Wilson<br></a></p>
     </div>
     
     <script src="https://giscus.app/client.js"
