Very minor change to title

--- a/Explore.HTML
+++ b/Explore.HTML
@@ -187,7 +187,7 @@
        
         <div class="grid">
             <div class="card"> 
-                <h3><a href="Submitted Content/Article9.html" target="_blank">Green, Living Scientists Develop Living Buildings That Can Absorb Carbon Dioxide</a></h3>
+                <h3><a href="Submitted Content/Article9.html" target="_blank">Green, Living: Scientists Develop Living Buildings That Can Absorb Carbon Dioxide</a></h3>
                 <p>Buildings that breathe? This article explores a groundbreaking material developed by Swiss scientists that uses living bacteria to absorb carbon dioxide—offering hope for climate resilience in the Caribbean.</p>
             </div>  
         </div>
