--- a/Submitted Content/Article9.html
+++ b/Submitted Content/Article9.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Green, Living Scientists Develop Living Buildings That Can Absorb Carbon Dioxide</title>
+    <title>Green, Living: Scientists Develop Living Buildings That Can Absorb Carbon Dioxide</title>
     <link rel="icon" href="/logo(1).png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;700&display=swap" rel="stylesheet">
     <style>
@@ -120,7 +120,7 @@
         </nav>
     </header>
     <div class="content-section">
-        <h2>Green, Living Scientists Develop Living Buildings That Can Absorb Carbon Dioxide</h2>
+        <h2>Green, Living: Scientists Develop Living Buildings That Can Absorb Carbon Dioxide</h2>
         <p><strong>Author: </strong><a href="https://www.linkedin.com/in/chloe-o-neal-5531a630b/" target="_blank">Chloe O'Neal — Staff Writer</a></p>
         <p><em>Date: </em> August 23rd, 2025</p>
 
