--- a/index.HTML
+++ b/index.HTML
@@ -186,7 +186,7 @@
                 </div>
                 
                 <div class="card">
-                    <h3><a href="Submitted Content/Article9.html" target="_blank">Green, Living Scientists Develop Living Buildings That Can Absorb Carbon Dioxide</a></h3>
+                    <h3><a href="Submitted Content/Article9.html" target="_blank">Green, Living: Scientists Develop Living Buildings That Can Absorb Carbon Dioxide</a></h3>
                     <p>Click the title to read more.</p>
                 </div>
              
